<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">ChessFeud</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name ="play_activity">PlayActivity</string>
    <string name ="settings_activity">SettingsActivity</string>
    <string name ="profile_activity">ProfileActivity</string>
    <string name ="stats_activity">StatsActivity</string>
    <string name ="about_activity">AboutActivity</string>
    <string name ="new_game">New Game +</string>
    <string name ="list_started">Started Games</string>
    <string name ="list_finished">Finished Games</string>
    <string name ="image_description_logotype">ChessFeud Logotype</string>
    
    <string name ="button_login">Log in</string>
    <string name ="hint_username">Username</string>
    <string name ="hint_password">Password</string>
    <string name ="hint_repassword">Re-Enter Password</string>
    <string name ="no_account">Do not have an account?</string>
    <string name ="button_register">Register for free</string>
    
    <string name ="about_descr">ChessFeud is made by Simon Almgren, Arvid Karlsson, Henrik Alburg and Sean Pavlov.</string>
    <string name ="about_copy">Copyright © 2012 - All Rights Reserved</string>
    <string name ="about_group_photo_descr">Image of the project members.</string>
    <string name ="about_avatars_copy">Avatars from Androidify.com</string>
    
    <string name ="dscr_register">Fill in the fields below, hit the register button and have fun!</string>
    <string name ="hint_email">E-Mail</string>
    <string name ="button_register_now">Register!</string>
    
    <string name="dscr_list_opponent_avatar">Opponents Avatar</string>
    <string name="dscr_list_team_white">White Team</string>
    <string name="dscr_list_team_black">Black Team</string>
    <string name="dscr_list_turn_bg">Number of Turns Background</string>
    <string name="dscr_list_white_piece_0">White Pawns</string>
    <string name="dscr_list_white_piece_1">White Rook</string>
    <string name="dscr_list_white_piece_2">White Rook</string>
    <string name="dscr_list_white_piece_3">White Bishop</string>
    <string name="dscr_list_white_piece_4">White Bishop</string>
    <string name="dscr_list_white_piece_5">White Knight</string>
    <string name="dscr_list_white_piece_6">White Knight</string>
    <string name="dscr_list_white_piece_7">White Queen</string>
    <string name="dscr_list_white_piece_8">White King</string>
    <string name="dscr_list_black_piece_0">Black Pawns</string>
    <string name="dscr_list_black_piece_1">Black Rook</string>
    <string name="dscr_list_black_piece_2">Black Rook</string>
    <string name="dscr_list_black_piece_3">Black Bishop</string>
    <string name="dscr_list_black_piece_4">Black Bishop</string>
    <string name="dscr_list_black_piece_5">Black Knight</string>
    <string name="dscr_list_black_piece_6">Black Knight</string>
    <string name="dscr_list_black_piece_7">Black Queen</string>
    <string name="dscr_list_black_piece_8">Black King</string>
    <string name="play_pieces_taken">Pieces taken:</string>
    <string name="dscr_bg_nbr_of_turns">Background image for number of turns</string>
    <string name="dscr_avatar_white">White players avatar</string>
    <string name="dscr_avatar_black">Black players avatar</string>
    <string name="dscr_icon_team_white">White player</string>
    <string name="dscr_icon_team_black">Black player</string>
    
    <string name="settings_h1_settings">Settings</string>
    <string name="settings_cdscr_avatar">Your current avatar.</string>
    <string name="settings_h2_avatar">Avatar</string>
    <string name="settings_h2_helptip">Helpful tip</string>
    <string name="settings_h2_sound">Sound</string>
    <string name="settings_dscr_avatar">Choose the avatar that will represent you when playing against others.</string>
    <string name="settings_dscr_helptip">The positions a selected piece can move to will be highligthed.</string>
    <string name="settings_dscr_sound">Turn on or off the sound in game.</string>
    <string name="about">About</string>
    
    <style name="Icon_Piece_ListItem">
        <item name="android:layout_width">19dp</item>
        <item name="android:layout_height">19dp</item>
    </style>

    <style name="Stats_p">
        <item name="android:layout_marginTop">3dp</item>
        <item name="android:textSize">18dp</item>
    </style>
    <style name="Stats_h2">
        <item name="android:gravity">center_horizontal</item>
        <item name="android:layout_weight">1</item>
        <item name="android:textSize">30dp</item>
    </style>
    <string name="stats_h1_stats">Stats</string>
    <string name="stats_txt_nbrPlayed">Games played:</string>
    <string name="stats_txt_averageMoves">Average moves:</string>
    <string name="stats_txt_totalMoves">Total moves:</string>
    <string name="stats_h2_wins">Wins</string>
    <string name="stats_h2_loss">Loss</string>
    <string name="stats_h2_draw">Draw</string>

    
    <style name="ButtonText">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:textStyle">bold</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>

</resources>