<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  android:layout_width="match_parent"
  android:layout_height="90dp" 
  xmlns:android="http://schemas.android.com/apk/res/android" 
  android:background="#CECECE" >
        
      <FrameLayout 
          android:layout_width="80dp" 
          android:layout_height="80dp" 
          android:layout_marginLeft="10dp" 
          android:layout_marginTop="5dp" 
          android:background="#FFFFFF" 
          android:paddingLeft="5dp" 
          android:paddingTop="5dp">
          <ImageView 
              android:id="@+id/imageView1" 
              android:layout_width="70dp" 
              android:layout_height="70dp" 
              android:src="@drawable/avatar_stina"/>
      </FrameLayout>
      
      <!-- Center Part -->
      <LinearLayout 
          android:layout_width="180dp" 
          android:layout_height="fill_parent" 
          android:orientation="vertical" 
          android:paddingLeft="10dp" 
          android:paddingTop="5dp">
          
          <!-- Whose Turn -->
          <TextView 
              android:id="@+id/player_turn" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content" 
              android:text="Your Turn" 
              android:textSize="18dp"/>
          
          <!-- Players and team -->
          <LinearLayout 
              android:layout_width="match_parent" 
              android:layout_height="wrap_content">
              
              <ImageView 
                  android:id="@+id/team_white" 
                  android:layout_width="10dp" 
                  android:layout_height="10dp" android:contentDescription="@string/dscr_list_team_white" android:src="@drawable/icon_team_white"/>
              
              <TextView 
                  android:id="@+id/player_white" 
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:layout_marginLeft="3dp" 
                  android:text="White P" 
                  android:textSize="10dp"/>
              
              <ImageView 
                  android:id="@+id/team_black" 
                  android:layout_width="10dp" 
                  android:layout_height="10dp" 
                  android:layout_marginLeft="5dp" android:contentDescription="@string/dscr_list_team_black" android:src="@drawable/icon_team_black"/>
              
              <TextView 
                  android:id="@+id/player_black" 
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:layout_marginLeft="3dp" 
                  android:text="Black P" 
                  android:textSize="10dp"/>
          </LinearLayout>
          
          <!-- White pieces -->
          <LinearLayout 
              android:layout_width="match_parent" 
              android:layout_height="wrap_content" android:layout_marginTop="3dp">
              
              <ImageView 
                  android:id="@+id/img_white_piece_0" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_white_piece_0" android:src="@drawable/icon_pieces_white_pawn"/>
              <TextView 
                  android:id="@+id/nbr_pawn_white" 
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:layout_gravity="bottom" 
                  android:text="x8" 
                  android:textSize="5dp"/>
              <ImageView 
                  android:id="@+id/img_white_piece_1" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_white_piece_1" android:src="@drawable/icon_pieces_white_rook"/>
              <ImageView 
                  android:id="@+id/img_white_piece_2" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_white_piece_2" android:src="@drawable/icon_pieces_white_rook"/>
              <ImageView 
                  android:id="@+id/img_white_piece_3" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_white_piece_3" android:src="@drawable/icon_pieces_white_bishop"/>
              <ImageView 
                  android:id="@+id/img_white_piece_4" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_white_piece_4" android:src="@drawable/icon_pieces_white_bishop"/>
              <ImageView 
                  android:id="@+id/img_white_piece_5" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_white_piece_5" android:src="@drawable/icon_pieces_white_knight"/>
              <ImageView 
                  android:id="@+id/img_white_piece_6" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_white_piece_6" android:src="@drawable/icon_pieces_white_knight"/>
              <ImageView 
                  android:id="@+id/img_white_piece_7" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_white_piece_7" android:src="@drawable/icon_pieces_white_queen"/>
              <ImageView 
                  android:id="@+id/img_white_piece_8" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_white_piece_8" android:src="@drawable/icon_pieces_white_king"/>
          </LinearLayout>
          
          <!-- Black pieces -->
          <LinearLayout 
              android:layout_width="match_parent" 
              android:layout_height="wrap_content" android:layout_marginTop="3dp">
              
              <ImageView 
                  android:id="@+id/img_black_piece_0" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_black_piece_0" android:src="@drawable/icon_pieces_black_pawn"/>
              <TextView 
                  android:id="@+id/nbr_pawn_black" 
                  android:layout_width="wrap_content" 
                  android:layout_height="wrap_content" 
                  android:layout_gravity="bottom" 
                  android:text="x8" 
                  android:textSize="5dp"/>
              <ImageView 
                  android:id="@+id/img_black_piece_1" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_black_piece_1" android:src="@drawable/icon_pieces_black_rook"/>
              <ImageView 
                  android:id="@+id/img_black_piece_2" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_black_piece_2" android:src="@drawable/icon_pieces_black_rook"/>
              <ImageView 
                  android:id="@+id/img_black_piece_3" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_black_piece_3" android:src="@drawable/icon_pieces_black_bishop"/>
              <ImageView 
                  android:id="@+id/img_black_piece_4" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_black_piece_4" android:src="@drawable/icon_pieces_black_bishop"/>
              <ImageView 
                  android:id="@+id/img_black_piece_5" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_black_piece_5" android:src="@drawable/icon_pieces_black_knight"/>
              <ImageView 
                  android:id="@+id/img_black_piece_6" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_black_piece_6" android:src="@drawable/icon_pieces_black_knight"/>
              <ImageView 
                  android:id="@+id/img_black_piece_7" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_black_piece_7" android:src="@drawable/icon_pieces_black_queen"/>
              <ImageView 
                  android:id="@+id/img_black_piece_8" 
                  android:layout_width="15dp" 
                  android:layout_height="15dp" android:contentDescription="@string/dscr_list_black_piece_8" android:src="@drawable/icon_pieces_black_king"/>
          </LinearLayout>
          
      </LinearLayout>
  <!-- Nbr of Turns -->
      <FrameLayout 
          android:layout_width="match_parent" 
          android:layout_height="match_parent">
          <ImageView 
              android:id="@+id/img_turns_bg" 
              android:layout_width="35dp" 
              android:layout_height="35dp" 
              android:layout_gravity="right" android:contentDescription="@string/dscr_list_turn_bg" android:src="@drawable/icon_turns"/>
          
          <TextView android:id="@+id/nbr_turns" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content" 
              android:layout_gravity="right" 
              android:layout_marginRight="6dp" 
              android:layout_marginTop="5dp" 
              android:text="99" 
              android:textSize="20dp"/>
      </FrameLayout>
    
    
</LinearLayout>
