<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
   <!-- Menu Bar -->
   <LinearLayout
   		android:layout_width="match_parent"
        android:layout_height="60dp" 
        android:layout_marginTop="5dp" 
        android:background="@drawable/bg_menu_border" 
        xmlns:android="http://schemas.android.com/apk/res/android" 
        xmlns:tools="http://schemas.android.com/tools" 
        android:orientation="horizontal">
        
       <TextView android:id="@+id/stats_txt_stats" 
           android:layout_width="0dip" 
           android:layout_height="wrap_content" 
           android:layout_gravity="center" 
           android:gravity="center" 
           android:layout_weight="1" 
           android:text="@string/stats_h1_stats" 
           android:textSize="40dp"/>
        
    </LinearLayout>
   <LinearLayout 
       android:layout_width="match_parent" 
       android:layout_height="wrap_content" 
       android:layout_marginLeft="5dp" 
       android:layout_marginRight="5dp" 
       android:layout_marginTop="10dp">
       <FrameLayout 
           android:layout_width="60dp" 
           android:layout_height="60dp" 
           android:background="#CCCCCC" 
           android:paddingLeft="5dp" 
           android:paddingTop="5dp">
           <ImageView 
               android:id="@+id/statsCurrentAvatar" 
               android:layout_width="50dp" 
               android:layout_height="50dp" 
               android:src="@drawable/avatar_stina"
               android:contentDescription="AFTERMERGE"/>
       </FrameLayout>
       <TextView 
           android:id="@+id/statsPlayerName" 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content" 
           android:layout_marginLeft="10dp" 
           android:text="PlayerName" 
           android:textSize="20dp"/>
   </LinearLayout>
   <LinearLayout 
       android:layout_width="match_parent" 
       android:layout_height="wrap_content" 
       android:layout_marginLeft="5dp" 
       android:layout_marginRight="5dp" 
       android:layout_marginTop="10dp">
       <LinearLayout 
           android:layout_width="wrap_content" 
           android:layout_height="match_parent" 
           android:orientation="vertical">
           
           <TextView 
               android:id="@+id/stats_txt_nbrPlayed"
               style="@style/Stats_p"
               android:layout_width="wrap_content" 
               android:layout_height="wrap_content" 
               android:text="@string/stats_txt_nbrPlayed"/>
           <TextView 
               android:id="@+id/stats_txt_averageMoves" 
               style="@style/Stats_p"
               android:layout_width="wrap_content" 
               android:layout_height="wrap_content" 
               android:text="@string/stats_txt_averageMoves"/>
           <TextView 
               android:id="@+id/stats_txt_totalMoves" 
               style="@style/Stats_p"
               android:layout_width="wrap_content" 
               android:layout_height="wrap_content" 
               android:text="@string/stats_txt_totalMoves"/>
       </LinearLayout>
       <LinearLayout 
           android:layout_width="wrap_content" 
           android:layout_height="match_parent" 
           android:layout_marginLeft="15dp" 
           android:orientation="vertical">
           <TextView 
               android:id="@+id/statsGamesPlayed" 
               style="@style/Stats_p"
               android:layout_width="wrap_content" 
               android:layout_height="wrap_content" 
               android:text="99"/>
           <TextView 
               android:id="@+id/statsAverageMoves" 
               style="@style/Stats_p"
               android:layout_width="wrap_content" 
               android:layout_height="wrap_content" 
               android:text="59"/>
           <TextView 
               android:id="@+id/statsTotalMoves" 
               style="@style/Stats_p"
               android:layout_width="wrap_content" 
               android:layout_height="wrap_content" 
               android:text="1337"/>
       </LinearLayout>
   </LinearLayout>
   <LinearLayout 
       android:layout_width="match_parent" 
       android:layout_height="wrap_content" 
       android:layout_marginLeft="5dp" 
       android:layout_marginRight="5dp" 
       android:layout_marginTop="20dp">
       <TextView 
           android:id="@+id/stats_title_wins" 
           style="@style/Stats_h2"
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content" 
           android:layout_weight="1" 
           android:text="@string/stats_h2_wins" 
           android:textColor="#00dd00"/>
       <TextView 
           android:id="@+id/stats_title_loss"
           style="@style/Stats_h2" 
           android:layout_width="wrap_content"  
           android:layout_height="wrap_content" 
           android:layout_weight="1" 
           android:text="@string/stats_h2_loss" 
           android:textColor="#dd0000"/>
       <TextView 
           android:id="@+id/stats_title_draw" 
           style="@style/Stats_h2"
           android:layout_width="wrap_content"  
           android:layout_height="wrap_content"
           android:layout_weight="1" 
           android:text="@string/stats_h2_draw" 
           android:textColor="#888888"/>
   </LinearLayout>
   <LinearLayout 
       android:layout_width="match_parent" 
       android:layout_height="wrap_content" 
       android:layout_marginLeft="5dp" 
       android:layout_marginRight="5dp">
       
       <TextView 
           android:id="@+id/statsPercentWins" 
           style="@style/Stats_h2" 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:layout_weight="1" 
           android:text="59%" 
           android:textSize="25dp"/>
       <TextView 
           android:id="@+id/statsPercentLoss" 
           style="@style/Stats_h2" 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:layout_weight="1" 
           android:text="41%" 
           android:textSize="25dp"/>
       <TextView 
           android:id="@+id/statsPercentDraw" 
           style="@style/Stats_h2" 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content" 
           android:layout_weight="1" 
           android:text="0%" 
           android:textSize="25dp"/>
   </LinearLayout>
</LinearLayout>
